--- a/javascript-practice/index.html
+++ b/javascript-practice/index.html
@@ -4,6 +4,7 @@
         <title>hello world javascript</title>
     </head>
     <body>
-        <script src=./alert.js></script>
+        <!-- <script src=./alert.js></script> -->
+        <script src=./prime.js></script>
     </body>
 </html>
