--- a/javascript-practice/index.html
+++ b/javascript-practice/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <!-- <script src=./alert.js></script> -->
-        <script src=./prime.js></script>
+        <script src=./test.js></script>
     </body>
 </html>
