--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>simple webapp</title>
-    <script src="/src/script.js" async></script>
+    <script src="app.js" async></script>
 </head>
 <body>
 <h1>Simple Webapp</h1>
