--- a/javascript-practice/index.html
+++ b/javascript-practice/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>hello world javascript</title>
-    </head>
-    <body>
-        <!-- <script src=./alert.js></script> -->
-        <script src=./test.js></script>
-    </body>
+<!DOCTYPE html> 
+<html lang="en-US">
+<head>
+    <meta charset="utf-8">
+    <title>simple webapp</title>
+    <script src="app.js" async></script>
+</head>
+<body>
+<h1>Simple Webapp</h1>
+<button>Click me</button>
+</body>
 </html>
